[package]
name = "similarity"
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/um-univie/similarity"
description = "A library for calculating similarity between numerical slices."
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.17"
rustfft = "6.2.0"

[dev-dependencies]
approx = "0.5.1"
criterion = "0.3.4"
rand = "0.8.4"

[[bench]]
name = "benchmarks"
harness = false

