[package]
name = "similarity"
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/um-univie/similarity"
description = "A comprehensive Rust library for calculating similarity metrics between vectors, collections, and spectral data with both functional and trait-based APIs"
readme = "README.md"
keywords = ["similarity", "distance", "correlation", "entropy", "statistics"]
categories = ["science", "algorithms", "mathematics"]
authors = ["Manuel Uhlir <manuel.uhlir@univie.ac.at>"]

[lib]
name = "similarity"
#crate-type = ["cdylib", "rlib"]

[dependencies]
rayon = { version = "1.10", optional = true }
rand = "0.9.1"
num-traits = "0.2.19"
rustfft = { version = "6.4.0", optional = true }

[dev-dependencies]
criterion = "0.6.0"
approx = "0.5"

[features]
default = ["parallel", "fft"]
parallel = ["rayon"]
fft = ["rustfft"]

[[example]]
name = "trait_demo"
required-features = ["parallel"]

[[bench]]
name = "benchmarks"
harness = false

[[bench]]
name = "spectral_entropy_benchmarks"
harness = false

[[bench]]
name = "similarity_benchmarks"
harness = false

[[bench]]
name = "entropy_benchmarks"
harness = false

[[bench]]
name = "transform_benchmarks"
harness = false

[[bench]]
name = "zero_cost_abstraction_benchmarks"
harness = false



[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1

